--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,13 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+
+
+
+        <color name="primaryColor">#448aff</color>
+        <color name="primaryLightColor">#83b9ff</color>
+        <color name="primaryDarkColor">#005ecb</color>
+        <color name="primaryTextColor">#000000</color>
+
+
 </resources>
